[gd_scene load_steps=4 format=3 uid="uid://2bbe7a4a3a8k"]

[ext_resource type="Script" uid="uid://bilqtq2vr8jdk" path="res://games/pseudo_pet.gd" id="1_o5scy"]
[ext_resource type="SpriteFrames" uid="uid://kkt8ifrpyylt" path="res://assets/animation_frames/pets/unknown_pet.tres" id="2_l6cgb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ysjiw"]
radius = 9.0
height = 22.0

[node name="PseudoPet" type="Node2D"]
script = ExtResource("1_o5scy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_l6cgb")
animation = &"Idle"
offset = Vector2(0, -8)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_ysjiw")

[connection signal="area_entered" from="Area2D" to="." method="areaCollide" binds= [true]]
[connection signal="area_exited" from="Area2D" to="." method="areaCollide" binds= [false]]
[connection signal="body_entered" from="Area2D" to="." method="bodyCollide" binds= [true]]
[connection signal="body_exited" from="Area2D" to="." method="bodyCollide" binds= [false]]
